syntax = "proto3";

package io.mystore.order.entity;

import "akkaserverless/annotations.proto";
import "google/protobuf/timestamp.proto";

option java_outer_classname = "OrderItemEntity";

option (akkaserverless.file).value_entity = {
  name: "OrderItem"
  entity_type: "order_item"
  state: "OrderItemState"
};

message OrderItemState {
  string customer_id = 1;
  string order_id = 2;
  string sku_id = 3;
  string sku_name = 4;
  int32 quantity = 5;
  google.protobuf.Timestamp ordered_utc = 6;
}
